[tool.poetry]
name = "pydub-stubs"
version = "0.25.1.2"
description = "Stub-only package containing type information for pydub"
authors = ["SeparateRecords <hey@clo4.net>"]
license = "ISC"
packages = [
    { include = "pydub-stubs" },
]
keywords = [
    "pydub",
    "types",
    "typing",
    "stubs",
]
repository = "https://github.com/clo4/pydub-stubs"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Typing :: Stubs Only",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"
pydub = "^0.25.1"

[tool.black]
pyi = true
line-length = 130

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
